<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cartel 2015</string>
    <string name="cartel2015">Cartel 2015</string>
    <string name="bienvenue">Bienvenue à \nMines Nantes</string>
    <string name="aproposcartel">A propos du </string>
    <string name="cartel">Cartel</string>
    <string name="lecartelcest">Le Cartel c\'est: \n\t\t- 4 jours \n\t\t- 15 sports \n\t\t- 12 délégations \n\t\t- 1300 participants \nUne équipe de 40 étudiants travaille au
        		 quotidien pour rendre cet événement sportif unique et spectaculaire !</string>
    <string name="carte">Carte</string>
    <string name="planning">Planning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_search_map">Rechercher un lieu</string>
    <string name="sports">Sports</string>
    <string name="repas">Repas</string>
    <string name="logements">Logements</string>
    <string name="emptylist">Pas de résultats</string>
    <string name="info_window_go_text"><u>J\'y vais !</u></string>
    <string name="no_file_to_upload_text">Aucun fichier sélectionné!</string>
    <string name="choose_file_to_upload">Mes photos</string>
    <string name="take_picture_to_upload">Appareil Photo</string>
    <string name="no_match_yet">Pas encore de résultat!</string>
    <string name="contact">contactez-nous</string>
    <string name="soirees">Soirées</string>
    <string name="clickToRotate">Pour changer l\'orientation: clic prolongé sur l\'image</string>
    <string name="spie">Spie batignolles opère sur cinq grands domaines d\'activités:\n
        1. La construction : bâtiments privés (bureaux, cliniques, centres commerciaux, bâtiments industriels, etc.) et bâtiments publics
         (écoles, lycées, hôpitaux, etc.)\n
		2. Le génie civil et les fondations : travaux souterrains, fondations spéciales, construction industriellle, ... \n
		3. L’énergie et l’aménagement : installation électrique, maintenance multi-technique, peinture, aménagement intérieur, façades...\n
		4. Les travaux publics : terrassement, travaux routiers, travaux sur réseaux...\n
		5. Les projets immobiliers (création ou rénovation de quartiers, centres commerciaux, construction ou réhabilitation de locaux à usage de bureaux,
		 de commerces, ou d\'hôtels, etc.) et les concessions (parkings, piscines)</string>
	<string name="credit_mutuel">Une finalité qui se traduit par une organisation articulée autour des sociétaires et des clients avec des structures
	     de décision au plus près des réalités locales et pour les sociétaires, des possibilités de s\’exprimer sur la gestion de leur banque dont ils
	      possèdent le capital puisqu\’ils en détiennent des parts sociales.\n\n
		Le Crédit Mutuel de Loire-Atlantique et du Centre Ouest offre aujourd\'hui une gamme de produits et de services complète qui s\'adresse aux particuliers,
		 aux agriculteurs, aux artisans, aux commerçants, aux professions libérales, aux entreprises, aux associations, aux collectivités locales...
		  Pour s\'adapter aux besoins de l\'ensemble de sa clientèle, il a d\'ailleurs diversifié ses métiers et propose des produits et services aussi
		  bien dans le domaine de la banque que dans celui de l\'assurance et de la téléphonie mobile.</string>	

</resources>