<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/on_upload_result_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" />

        <LinearLayout
            android:id="@+id/no_file_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/no_file"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/no_file_to_upload_text" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <Button
                    android:id="@+id/take_picture_to_upload"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/take_picture_to_upload" />

                <Button
                    android:id="@+id/choose_file_to_upload"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/choose_file_to_upload" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/name_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:hint="Nom de l&apos;image"
                android:imeOptions="actionDone" />

            <Button
                android:id="@+id/upload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Uploader" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:layout_margin="3dp" />
        <TextView 
            android:id="@+id/clickToRotateIndication"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clickToRotate"/>
    </LinearLayout>

</ScrollView>